Views/Permissions: Use shorter strings for site setting drop downs.

Drop-downs in the OIB typically show three options for each site setting - ask,
allow, and block. For Harmony, shorter strings should be used in these drop
downs. r453710 partly implemented the use of short strings for settings that
were set to the default, but it also introduced a bug where it would show the
incorrect string in place of the default option when there was a non-default
option selected. (For example, when set to 'Allow', the default option that
usually says 'Ask' would also say 'Allow', resulting in two 'Allow' options -
one using the long string and one using the short.)

Fix this bug and also start using short strings for all other site setting
options.

BUG=657292

Review-Url: https://codereview.chromium.org/2732963005
Cr-Commit-Position: refs/heads/master@{#455580}

Former-commit-id: 4b0f801fa697ed48e8c2b7f1c0cd1407cacdd783